Refactor JsonMurmel to use Files.readString for reading JSON files